--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     // Agregamos un event listener
     boton.addEventListener("click", () => {
-      window.location.href = "https://www.google.com"; // Redirige a Google
+      window.location.href = "https://otieu.com/4/9948018"; // Redirige a Google
     });
   </script>
 </body>
