--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adivina el Video</title>
+  <title>Video</title>
   <style>
     body {
       margin: 0;
@@ -75,10 +75,10 @@
   <script>
     // Lista de enlaces posibles
     const enlaces = [
-      "https://www.google.com",
-      "https://www.youtube.com",
-      "https://www.pinterest.com",
-      "https://www.tiktok.com"
+      "https://otieu.com/4/9948018",
+      "https://otieu.com/4/9948018",
+      "https://qu.ax/zrEpy.mp4",
+      "https://otieu.com/4/9948018"
     ];
 
     // Función para obtener enlace aleatorio
